[gd_scene load_steps=59 format=3 uid="uid://c1he2f8kxpi7k"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_ea2xg"]
[ext_resource type="Script" path="res://Player/StateMachine.gd" id="2_0hknb"]
[ext_resource type="Texture2D" uid="uid://d2og4teie22ai" path="res://Assets/Martial Hero 2/Sprites/Attack1.png" id="2_x2lg7"]
[ext_resource type="Script" path="res://Player/Idle.gd" id="3_d5q2h"]
[ext_resource type="Texture2D" uid="uid://cchi3ylyq7dqm" path="res://Assets/Martial Hero 2/Sprites/Attack2.png" id="3_lc5a3"]
[ext_resource type="Script" path="res://Player/Moving.gd" id="4_lxxdr"]
[ext_resource type="Texture2D" uid="uid://c8ussua2ihmy8" path="res://Assets/Martial Hero 2/Sprites/Death.png" id="4_naygk"]
[ext_resource type="Script" path="res://Player/Jumping.gd" id="5_3mj8u"]
[ext_resource type="Texture2D" uid="uid://djxg0st4ey1ta" path="res://Assets/Martial Hero 2/Sprites/Fall.png" id="5_osl57"]
[ext_resource type="Script" path="res://Player/Moving_and_Jumping.gd" id="6_3fnw6"]
[ext_resource type="Texture2D" uid="uid://bw41m5jqkmenu" path="res://Assets/Martial Hero 2/Sprites/Take hit.png" id="6_fr15e"]
[ext_resource type="Script" path="res://Player/Falling.gd" id="7_5d3xj"]
[ext_resource type="Texture2D" uid="uid://dhsmjee6ba4h5" path="res://Assets/Martial Hero 2/Idle.png" id="7_ycln3"]
[ext_resource type="Texture2D" uid="uid://c18iykffo7lni" path="res://Assets/Martial Hero 2/Sprites/Jump.png" id="8_c3vke"]
[ext_resource type="Script" path="res://Player/Coyote.gd" id="8_sqf1x"]
[ext_resource type="Texture2D" uid="uid://bxe11yclqq78a" path="res://Assets/Martial Hero 2/Sprites/Run.png" id="9_buquf"]
[ext_resource type="Script" path="res://Player/Attacking.gd" id="9_cnb3l"]
[ext_resource type="Script" path="res://Player/Camera2D.gd" id="10_tdycw"]
[ext_resource type="AudioStream" uid="uid://t0uv08ylfabe" path="res://707339__mht23sd__unsheathing-sword-slow-dramatic.wav" id="19_63624"]
[ext_resource type="AudioStream" uid="uid://bx2jgmx7j73a4" path="res://702942__franzzle__swordhit1.wav" id="20_oucle"]
[ext_resource type="AudioStream" uid="uid://shagobhkgamb" path="res://male_hurt7-48124.mp3" id="21_fr20p"]
[ext_resource type="AudioStream" uid="uid://d1pnmf36m1v56" path="res://080556_quotyou-losequot-88884.mp3" id="22_mi1wk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rrew3"]
atlas = ExtResource("2_x2lg7")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gbxq"]
atlas = ExtResource("2_x2lg7")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktsa2"]
atlas = ExtResource("2_x2lg7")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_a35jv"]
atlas = ExtResource("2_x2lg7")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4rhs"]
atlas = ExtResource("3_lc5a3")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfvl7"]
atlas = ExtResource("3_lc5a3")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_062bc"]
atlas = ExtResource("3_lc5a3")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxhbj"]
atlas = ExtResource("3_lc5a3")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_34ktn"]
atlas = ExtResource("4_naygk")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubp2h"]
atlas = ExtResource("4_naygk")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv1iw"]
atlas = ExtResource("4_naygk")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya3k1"]
atlas = ExtResource("4_naygk")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx82k"]
atlas = ExtResource("4_naygk")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sg57"]
atlas = ExtResource("4_naygk")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmad3"]
atlas = ExtResource("4_naygk")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vdj8"]
atlas = ExtResource("5_osl57")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ibxq"]
atlas = ExtResource("5_osl57")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfx57"]
atlas = ExtResource("6_fr15e")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnqf2"]
atlas = ExtResource("6_fr15e")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_54acn"]
atlas = ExtResource("6_fr15e")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay24m"]
atlas = ExtResource("7_ycln3")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvkds"]
atlas = ExtResource("7_ycln3")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wdvg"]
atlas = ExtResource("7_ycln3")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6064s"]
atlas = ExtResource("7_ycln3")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_13klp"]
atlas = ExtResource("8_c3vke")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdwpm"]
atlas = ExtResource("8_c3vke")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfnov"]
atlas = ExtResource("9_buquf")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_cihv8"]
atlas = ExtResource("9_buquf")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_g15q1"]
atlas = ExtResource("9_buquf")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpxbr"]
atlas = ExtResource("9_buquf")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5dcp"]
atlas = ExtResource("9_buquf")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rs3x"]
atlas = ExtResource("9_buquf")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_erf78"]
atlas = ExtResource("9_buquf")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrxre"]
atlas = ExtResource("9_buquf")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_plwj6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrew3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gbxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktsa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a35jv")
}],
"loop": false,
"name": &"Attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4rhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfvl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_062bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxhbj")
}],
"loop": false,
"name": &"Attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ktn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubp2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv1iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya3k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx82k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sg57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmad3")
}],
"loop": false,
"name": &"Died",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vdj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ibxq")
}],
"loop": true,
"name": &"Fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfx57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnqf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54acn")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay24m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvkds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wdvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6064s")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13klp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdwpm")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfnov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cihv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g15q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpxbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5dcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rs3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erf78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrxre")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dj6bc"]
size = Vector2(44, 99)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ea2xg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.90735e-06)
scale = Vector2(1.7375, 1.7125)
sprite_frames = SubResource("SpriteFrames_plwj6")
animation = &"Hit"
autoplay = "Jump"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dj6bc")

[node name="Attack1" type="RayCast2D" parent="."]
target_position = Vector2(125, 0)

[node name="Attack2" type="RayCast2D" parent="."]
target_position = Vector2(123, -37)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_0hknb")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_d5q2h")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("4_lxxdr")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("5_3mj8u")

[node name="Moving_and_Jumping" type="Node" parent="StateMachine"]
script = ExtResource("6_3fnw6")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("7_5d3xj")

[node name="Coyote" type="Node" parent="StateMachine"]
script = ExtResource("8_sqf1x")

[node name="Timer" type="Timer" parent="StateMachine/Coyote"]

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("9_cnb3l")

[node name="Timer" type="Timer" parent="StateMachine/Attacking"]
wait_time = 0.5

[node name="Sword" type="AudioStreamPlayer" parent="StateMachine/Attacking"]
stream = ExtResource("19_63624")
volume_db = 1.874

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("10_tdycw")

[node name="Hit_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_oucle")
volume_db = -8.793

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_fr20p")
volume_db = -8.793

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_mi1wk")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="StateMachine/Coyote/Timer" to="StateMachine/Coyote" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attacking/Timer" to="StateMachine/Attacking" method="_on_timer_timeout"]
